tests/ui/assign_to_const_ptr.ina
// COMPILE_FAIL

fn main() {
    let a = 20;
    let b = &a as *i32;
    *b = 50;
}

